// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ez.paginated() > OpenAPI documentation > cursor pagination endpoint is documented with query params and response schema 1`] = `
"openapi: 3.1.0
info:
  title: Cursor Paginated API
  version: 1.0.0
paths:
  /posts:
    get:
      operationId: GetPosts
      parameters:
        - name: cursor
          in: query
          required: false
          description: Cursor for the next page; omit for first page
          schema:
            description: Cursor for the next page; omit for first page
            type: string
        - name: limit
          in: query
          required: false
          description: Page size (number of items per page)
          schema:
            default: 20
            description: Page size (number of items per page)
            type: integer
            minimum: 1
            maximum: 50
      responses:
        "200":
          description: GET /posts Positive response
          content:
            application/json:
              schema:
                type: object
                properties:
                  status:
                    type: string
                    const: success
                  data:
                    type: object
                    properties:
                      items:
                        type: array
                        items:
                          type: object
                          properties:
                            id:
                              type: number
                            name:
                              type: string
                          required:
                            - id
                            - name
                          additionalProperties: false
                        description: Page of items
                      nextCursor:
                        type:
                          - string
                          - "null"
                      hasMore:
                        description: Whether more pages exist
                        type: boolean
                      limit:
                        type: integer
                        minimum: 1
                        maximum: 9007199254740991
                        description: Page size used
                    required:
                      - items
                      - nextCursor
                      - limit
                    additionalProperties: false
                required:
                  - status
                  - data
                additionalProperties: false
        "400":
          description: GET /posts Negative response
          content:
            application/json:
              schema:
                type: object
                properties:
                  status:
                    type: string
                    const: error
                  error:
                    type: object
                    properties:
                      message:
                        type: string
                    required:
                      - message
                    additionalProperties: false
                required:
                  - status
                  - error
                additionalProperties: false
              examples:
                example1:
                  value:
                    status: error
                    error:
                      message: Sample error message
    head:
      operationId: HeadPosts
      parameters:
        - name: cursor
          in: query
          required: false
          description: Cursor for the next page; omit for first page
          schema:
            description: Cursor for the next page; omit for first page
            type: string
        - name: limit
          in: query
          required: false
          description: Page size (number of items per page)
          schema:
            default: 20
            description: Page size (number of items per page)
            type: integer
            minimum: 1
            maximum: 50
      responses:
        "200":
          description: HEAD /posts Positive response
        "400":
          description: HEAD /posts Negative response
components:
  schemas: {}
  responses: {}
  parameters: {}
  examples: {}
  requestBodies: {}
  headers: {}
  securitySchemes: {}
  links: {}
  callbacks: {}
tags: []
servers:
  - url: https://example.com
"
`;

exports[`ez.paginated() > OpenAPI documentation > offset pagination endpoint is documented with query params and response schema 1`] = `
"openapi: 3.1.0
info:
  title: Paginated API
  version: 1.0.0
paths:
  /users:
    get:
      operationId: GetUsers
      parameters:
        - name: limit
          in: query
          required: false
          description: Page size (number of items per page)
          schema:
            default: 20
            description: Page size (number of items per page)
            type: integer
            minimum: 1
            maximum: 100
        - name: offset
          in: query
          required: false
          description: Number of items to skip
          schema:
            default: 0
            description: Number of items to skip
            type: integer
            minimum: 0
            maximum: 9007199254740991
      responses:
        "200":
          description: GET /users Positive response
          content:
            application/json:
              schema:
                type: object
                properties:
                  status:
                    type: string
                    const: success
                  data:
                    type: object
                    properties:
                      items:
                        type: array
                        items:
                          type: object
                          properties:
                            id:
                              type: number
                            name:
                              type: string
                          required:
                            - id
                            - name
                          additionalProperties: false
                        description: Page of items
                      total:
                        type: integer
                        minimum: 0
                        maximum: 9007199254740991
                        description: Total number of items
                      limit:
                        type: integer
                        minimum: 1
                        maximum: 9007199254740991
                        description: Page size used
                      offset:
                        type: integer
                        minimum: 0
                        maximum: 9007199254740991
                        description: Offset used
                    required:
                      - items
                      - total
                      - limit
                      - offset
                    additionalProperties: false
                required:
                  - status
                  - data
                additionalProperties: false
        "400":
          description: GET /users Negative response
          content:
            application/json:
              schema:
                type: object
                properties:
                  status:
                    type: string
                    const: error
                  error:
                    type: object
                    properties:
                      message:
                        type: string
                    required:
                      - message
                    additionalProperties: false
                required:
                  - status
                  - error
                additionalProperties: false
              examples:
                example1:
                  value:
                    status: error
                    error:
                      message: Sample error message
    head:
      operationId: HeadUsers
      parameters:
        - name: limit
          in: query
          required: false
          description: Page size (number of items per page)
          schema:
            default: 20
            description: Page size (number of items per page)
            type: integer
            minimum: 1
            maximum: 100
        - name: offset
          in: query
          required: false
          description: Number of items to skip
          schema:
            default: 0
            description: Number of items to skip
            type: integer
            minimum: 0
            maximum: 9007199254740991
      responses:
        "200":
          description: HEAD /users Positive response
        "400":
          description: HEAD /users Negative response
components:
  schemas: {}
  responses: {}
  parameters: {}
  examples: {}
  requestBodies: {}
  headers: {}
  securitySchemes: {}
  links: {}
  callbacks: {}
tags: []
servers:
  - url: https://example.com
"
`;
